@@ -1,0 +1,13 @@
+#ifndef xmpp_opcode_header_h_
+#define xmpp_opcode_header_h_
+
+#include "egxp/egxp_node_struct.h"
+
+
+/**
+ * Stream begin callback
+ */
+void xmpp_callback_stream_begin_cb (Egxp_Message * msg, void * eg);
+
+
+#endif
